# minify-css

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
minify_css/: __init__.py  core.py
tests/: test_minify_css.py
